# localDataExtractor

./: .env.example  .gitignore  LICENSE  README.md  config.sample.toml  gui.py  main.py  pyproject.toml
scripts/: setup_macos.sh
src/localdataextractor/: __init__.py  cli.py  models.py  pipeline.py  router.py  verify.py
src/localdataextractor/config/: __init__.py  settings.py
src/localdataextractor/gui/: __init__.py  app.py
src/localdataextractor/llm/: __init__.py  client.py
src/localdataextractor/normalize/: __init__.py  builder.py
src/localdataextractor/ocr/: __init__.py  ocrmypdf_runner.py
src/localdataextractor/parsers/: __init__.py  base.py  common.py  docling_parser.py  glm_ocr_parser.py  libreoffice_converter.py  manager.py  markitdown_parser.py  ocr_docling_parser.py  table_extractors.py  text_parser.py  tika_parser.py
src/localdataextractor/quality/: __init__.py  scoring.py  table_validation.py
src/localdataextractor/render/: __init__.py  markdown_renderer.py
src/localdataextractor/state/: __init__.py  store.py
src/localdataextractor/utils/: dependency_checks.py  filesystem.py  image_preprocess.py  json_io.py  logging_utils.py  text_quality.py
tests/: test_below_threshold.py  test_config.py  test_e2e_local.py  test_pipeline_retry.py  test_quality.py  test_render.py  test_resumability.py  test_router.py  test_state.py  test_text_quality.py  test_verify.py
