[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localdataextractor"
version = "0.1.0"
description = "Privacy-first local document to Markdown extraction pipeline"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "localDataExtractor"}]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["document-extraction", "markdown", "ocr", "local-first", "privacy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
full = [
  "markitdown>=0.0.1a3",
  "docling>=2.32.0",
  "ocrmypdf>=16.0.0",
  "pdfplumber>=0.11.0",
  "pypdf>=5.0.0",
  "openpyxl>=3.1.5",
  "python-docx>=1.1.2",
  "python-pptx>=1.0.2",
  "xlrd>=2.0.1",
  "PySide6>=6.8.0",
]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
localdataextractor = "localdataextractor.cli:main"
localdataextractor-gui = "localdataextractor.gui.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
